--- a/src/GummiBearKingdom/Views/Products/Index.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Index.cshtml
@@ -6,16 +6,19 @@
 </head>
 <body>
     <h2>Gummi Bear Products</h2>
-
+    <hr />
     <h4>@Html.DisplayNameFor(model => model.Name)</h4>
     <ul>
         @foreach (var listProduct in Model)
         {
-            <li>@Html.DisplayFor(modelProduct => listProduct.Name) | @Html.ActionLink("Details", "Details", new { id = listProduct.ProductId })</li>
-            
+            <li>@Html.DisplayFor(modelItem => listProduct.Name) | 
+            @Html.ActionLink("Details", "Details", new { id = listProduct.ProductId }) | 
+            @Html.ActionLink("Edit", "Edit", new { id = listProduct.ProductId }) | 
+            @Html.ActionLink("Delete", "Delete", new { id = listProduct.ProductId })</li>
         }
     </ul>
-    <h4>@Html.ActionLink("Add new Product", "Create")</h4>
+    <h4>@Html.ActionLink("Add new product", "Create")</h4>
 
 </body>
+
 </html>
