--- a/src/GummiBearKingdom/Views/Home/Index.cshtml
+++ b/src/GummiBearKingdom/Views/Home/Index.cshtml
@@ -1,8 +1,7 @@
-﻿<html>
-<head>
-    <title>Gummi Bear Kingdom</title>
-</head>
-<body>
+﻿@{
+    ViewData["Title"] = "Gummi Bear Kingdom";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+
     <h2>Welcome to the Best Gummi Bear in the world!</h2> 
-</body>
-</html>
