--- a/src/GummiBearKingdom/Views/Products/Delete.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Delete.cshtml
@@ -1,10 +1,10 @@
-﻿@model GummiBearKingdom.Models.Product
+﻿@{
+    ViewData["Title"] = "Gummi Bear Kingdom";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
-<html>
-<head>
-    <title>Gummi Bear Product - Delete</title>
-</head>
-<body>
+@model GummiBearKingdom.Models.Product
+
 
     <h2>Are you sure you want to delete this?</h2>
     <hr />
@@ -14,5 +14,3 @@
         <input type="submit" value="Delete" />
     }
     @Html.ActionLink("Back to List", "Index")
-</body>
-</html>
