--- a/src/GummiBearKingdom/Views/Products/Delete.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Delete.cshtml
@@ -1,10 +1,9 @@
-﻿@{
-    ViewData["Title"] = "Gummi Bear Kingdom";
+﻿@model GummiBearKingdom.Models.Product
+
+@{
+    ViewData["Title"] = "Product - Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-@model GummiBearKingdom.Models.Product
-
 
     <h2>Are you sure you want to delete this?</h2>
     <hr />
