--- a/src/GummiBearKingdom/Views/Shared/_Layout.cshtml
+++ b/src/GummiBearKingdom/Views/Shared/_Layout.cshtml
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Gummi Bear Kingdom</title>
+    <title>@ViewBag.Title</title>
 
     <environment names="Development">
+        <link rel="stylesheet" type="text/css" href="~/css/styles.css" />
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
