add dbcontext fixed page show 500 error b/c layout file

--- a/src/GummiBearKingdom/wwwroot/css/styles.css
+++ b/src/GummiBearKingdom/wwwroot/css/styles.css
@@ -1,7 +1,6 @@
 ﻿body {
-    background-image:url(https://www.bing.com/images/search?q=Raining+Light&view=detailv2&&id=DF2662A08E975ADA076A358604F88E78791EF4F4&selectedIndex=26&ccid=cn1Lz%2fWW&simid=608031095348792390&thid=OIP.M727d4bcff596adc5224bd8dec3653da3H0&ajaxhist=0);
-    background-repeat: no-repeat;
-    color:blanchedalmond;
 
+background-color:aqua;    
+  
     
 }
