add Update Create works & Delete

--- a/src/GummiBearKingdom/Views/Products/Create.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GummiBearKingdom.Models.Product
 
 @{
-    ViewData["Title"] = "Product - Delete";
+    ViewData["Title"] = "Product - Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
     <h2>Create</h2>
