--- a/src/GummiBearKingdom/Views/Blogs/Index.cshtml
+++ b/src/GummiBearKingdom/Views/Blogs/Index.cshtml
@@ -23,18 +23,19 @@
             <td>
                 @Html.DisplayFor(modelProduct => listBlog.Title)
                 <br />
+                @Html.DisplayFor(modelItem => listBlog.Author)
+                <br />
                 @Html.DisplayFor(modelProduct => listBlog.Image_url)
                 <br />
                 @Html.DisplayFor(modelProduct => listBlog.Text_body)
                 <br/>
+                @Html.ActionLink("Delete", "Delete", new { id = listBlog.BlogId })
                 <hr />
             </td>
             <td>
-
-                @Html.DisplayFor(modelItem => listBlog.Author)
-                
-                
+               
             </td>
+            
         </tr>
     }
 </table>
