--- a/src/GummiBearKingdom/Views/Blogs/Delete.cshtml
+++ b/src/GummiBearKingdom/Views/Blogs/Delete.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Are you sure you want to delete this?</h2>
+<h2>Are you sure you want to delete this Blog?</h2>
 <hr />
 @Html.DisplayNameFor(model => model.Title): @Html.DisplayFor(model => model.Title)
 @using (Html.BeginForm())
