--- a/src/GummiBearKingdom/Views/Products/Index.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Index.cshtml
@@ -30,7 +30,7 @@
             </td>
             <td>
 
-                    @Html.DisplayFor(modelItem => listProduct.Name) |
+                    @Html.DisplayFor(modelProduct => listProduct.Name) |
                     @Html.ActionLink("Details", "Details", new { id = listProduct.ProductId }) |
                     @Html.ActionLink("Edit", "Edit", new { id = listProduct.ProductId }) |
                     @Html.ActionLink("Delete", "Delete", new { id = listProduct.ProductId })
