add container to _layout

--- a/src/GummiBearKingdom/Views/Shared/_Layout.cshtml
+++ b/src/GummiBearKingdom/Views/Shared/_Layout.cshtml
@@ -9,9 +9,9 @@
     
 </head>
 <body>
-  
-   
+    <div class="container">
         @RenderBody()
+    </div>
         <hr />
         <footer>
             <p>&copy; 2016 - Gummi Bear Kingdom; Vichitra Pool</p>
