add products CRUD works but detail is broken

--- a/src/GummiBearKingdom/Views/Blogs/Index.cshtml
+++ b/src/GummiBearKingdom/Views/Blogs/Index.cshtml
@@ -11,10 +11,10 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Title)
+            <h1>Welcome To Gummi Bear Kingdom Blog</h1>
         </th>
     
-        <th>@Html.DisplayNameFor(model => model.Author)</th>
+        
     </tr>
 
     @foreach (var listBlog in Model)
