--- a/src/GummiBearKingdom/Views/Products/Create.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Create.cshtml
@@ -11,12 +11,16 @@
     {
         @Html.LabelFor(model => model.Name)
         @Html.TextBoxFor(model => model.Name)
+        <br /><br />
         @Html.LabelFor(model => model.Cost)
         @Html.TextBoxFor(model => model.Cost)
-
+        <br /><br />
+        @Html.LabelFor(model => model.Image_url)
+        @Html.TextBoxFor(model => model.Image_url)
+        <br /><br />
         @Html.LabelFor(model => model.Country_origin)
         @Html.TextBoxFor(model => model.Country_origin)
-
+        <br /><br />
         @Html.LabelFor(model => model.CategoryId)
         @Html.DropDownList("CategoryId")
 
