--- a/src/GummiBearKingdom/Views/Products/Edit.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Edit.cshtml
@@ -10,15 +10,18 @@
 
     @using (Html.BeginForm())
     {
-        @Html.HiddenFor(model => model.ProductId)
-
         @Html.LabelFor(model => model.Name)
-        @Html.EditorFor(model => model.Name)
+        @Html.TextBoxFor(model => model.Name)
+        <br /><br />
         @Html.LabelFor(model => model.Cost)
-        @Html.EditorFor(model => model.Cost)
+        @Html.TextBoxFor(model => model.Cost)
+        <br /><br />
+        @Html.LabelFor(model => model.Image_url)
+        @Html.TextBoxFor(model => model.Image_url)
+        <br /><br />
         @Html.LabelFor(model => model.Country_origin)
-        @Html.EditorFor(model => model.Country_origin)
-
+        @Html.TextBoxFor(model => model.Country_origin)
+        <br /><br />
         @Html.LabelFor(model => model.CategoryId)
         @Html.DropDownList("CategoryId")
 
