--- a/src/GummiBearKingdom/Views/Products/Index.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Index.cshtml
@@ -11,11 +11,12 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
             @Html.DisplayNameFor(model => model.Category.Type)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Name)
+        </th>
+        
         <th></th>
     </tr>
 
@@ -23,19 +24,18 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(modelProduct => listProduct.Name)
-            </td>
-            <td>
                 @Html.DisplayFor(modelProduct => listProduct.Category.Type)
             </td>
             <td>
-
-                    @Html.DisplayFor(modelProduct => listProduct.Name) |
-                    @Html.ActionLink("Details", "Details", new { id = listProduct.ProductId }) |
-                    @Html.ActionLink("Edit", "Edit", new { id = listProduct.ProductId }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = listProduct.ProductId })
-                
+                @Html.DisplayFor(modelProduct => listProduct.Name)
+                <br /><br />
+                <img src="@listProduct.Image_url" alt="listProduct.Title" />
+                <br /><br />
+                @Html.ActionLink("Details", "Details", new { id = listProduct.ProductId }) |
+                @Html.ActionLink("Edit", "Edit", new { id = listProduct.ProductId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = listProduct.ProductId })
             </td>
+
         </tr>
     }
 </table>
