--- a/src/GummiBearKingdom/Views/Products/Details.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Details.cshtml
@@ -1,19 +1,18 @@
 ﻿@model GummiBearKingdom.Models.Product
 
-<@{
-    ViewData["Title"] = "Product - Details";
+@{
+    ViewData["Title"] = "Product - Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
     <h2>Gummi Bear Product - Details</h2>
     <hr />
     
             <h4>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h4>
-            <h4>@Html.DisplayNameFor(model => model.Cost): $@Html.DisplayFor(model => model.Cost).00</h4>
-             
-            <img src="@listProduct.Image_url" alt="listProduct.Title" />
+            <h4>@Html.DisplayNameFor(model => model.Cost): $@Html.DisplayFor(model => model.Cost).00</h4
+
             <h4>@Html.DisplayNameFor(model => model.Country_origin): @Html.DisplayFor(model => model.Country_origin)</h4>
             <h4>@Html.DisplayNameFor(model => model.CategoryId) : @Html.DisplayFor(model => model.CategoryId)</h4>
             <h4>@Html.ActionLink("Back to list", "Index")</h4>
-
+    
 
             
