--- a/src/GummiBearKingdom/Views/Products/Details.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Details.cshtml
@@ -8,10 +8,11 @@
     <hr />
     
             <h4>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h4>
-            <h4>@Html.DisplayNameFor(model => model.Cost): $@Html.DisplayFor(model => model.Cost).00</h4
-
+            <h4>@Html.DisplayNameFor(model => model.Cost): $@Html.DisplayFor(model => model.Cost).00</h4>
+            <img src="@Html.DisplayFor(model => model.Image_url)" alt="@Html.DisplayFor(model => model.Name)" />
             <h4>@Html.DisplayNameFor(model => model.Country_origin): @Html.DisplayFor(model => model.Country_origin)</h4>
             <h4>@Html.DisplayNameFor(model => model.CategoryId) : @Html.DisplayFor(model => model.CategoryId)</h4>
+            <br /><br />
             <h4>@Html.ActionLink("Back to list", "Index")</h4>
     
 
