--- a/src/GummiBearKingdom/Views/Products/Create.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Create.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Product - Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="container">
     <h2>Create</h2>
     <hr />
     <h4>Add a new Product</h4>
@@ -30,4 +31,4 @@
     }
     <p>@Html.ActionLink("Back to Products", "Index")</p>
 
-
+</div>
