--- a/src/GummiBearKingdom/Views/Products/Edit.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Edit.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "Product - Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="container">
 
     <h2>Edit</h2>
     <hr />
@@ -29,3 +30,5 @@
         <input type="submit" value="Save" />
     }
     <p>@Html.ActionLink("Back to list", "Index")</p>
+
+</div>
