--- a/src/GummiBearKingdom/Views/Blogs/Delete.cshtml
+++ b/src/GummiBearKingdom/Views/Blogs/Delete.cshtml
@@ -4,12 +4,13 @@
     ViewData["Title"] = "Blog - Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Are you sure you want to delete this Blog?</h2>
-<hr />
-@Html.DisplayNameFor(model => model.Title): @Html.DisplayFor(model => model.Title)
-@using (Html.BeginForm())
-{
-    <input type="submit" value="Delete" />
-}
-@Html.ActionLink("Back to List", "Index")
+<div class="container">
+    <h2>Are you sure you want to delete this Blog?</h2>
+    <hr />
+    @Html.DisplayNameFor(model => model.Title): @Html.DisplayFor(model => model.Title)
+    @using (Html.BeginForm())
+    {
+        <input type="submit" value="Delete" />
+    }
+    @Html.ActionLink("Back to List", "Index")
+</div>
