--- a/src/GummiBearKingdom/Views/Products/Delete.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Delete.cshtml
@@ -4,8 +4,9 @@
     ViewData["Title"] = "Product - Delete";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="container">
 
-    <h2>Are you sure you want to delete this?</h2>
+    <h2>Are you sure you want to delete this Product?</h2>
     <hr />
     @Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)
     @using (Html.BeginForm())
@@ -13,3 +14,5 @@
         <input type="submit" value="Delete" />
     }
     @Html.ActionLink("Back to List", "Index")
+
+</div>
