add hidden Id for edit

--- a/src/GummiBearKingdom/Views/Blogs/Create.cshtml
+++ b/src/GummiBearKingdom/Views/Blogs/Create.cshtml
@@ -21,7 +21,7 @@
         @Html.TextBoxFor(model => model.Image_url)
         <br /><br />
         @Html.LabelFor(model => model.Text_body)
-        @Html.EditorFor(model => model.Text_body)
+        @Html.TextAreaFor(model => model.Text_body)
 
 
 
