add hidden Id for product's edit & now edit is working

--- a/src/GummiBearKingdom/Views/Products/Edit.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Edit.cshtml
@@ -11,6 +11,8 @@
 
     @using (Html.BeginForm())
     {
+        @Html.HiddenFor(model => model.ProductId)
+
         @Html.LabelFor(model => model.Name)
         @Html.EditorFor(model => model.Name)
         <br /><br />
