add update gummie

--- a/src/GummiBearKingdom/Views/Products/Index.cshtml
+++ b/src/GummiBearKingdom/Views/Products/Index.cshtml
@@ -8,6 +8,8 @@
 <div class="container">
 
     <hr />
+    <h2>Welcom to Gummi Bear Products</h2>
+    <h3>@Html.ActionLink("Add new product", "Create")</h3>
     <table class="table">
         <tr>
             <th>
@@ -40,6 +42,6 @@
         }
     </table>
 
-    <h4>@Html.ActionLink("Add new product", "Create")</h4>
+    
 
 </div>
